[package]
name = "bf_telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
tokio = { version = "1.8.5", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
